addressed section heading issue on firefox but not nav yet #120

--- a/css/dwyl.css
+++ b/css/dwyl.css
@@ -60,6 +60,7 @@ ol li {
     position: absolute;
     left: 0;
     right: 0;
+    top: 94px;
   }
   .section-boxes {
       padding-top: 6em;
